# song-announcer2

./: .editorconfig  .gitignore  Cargo.toml
server/: .env.sample  .eslintrc.js  README.md  jest.config.js  package.json  tsconfig.json
server/src/: index.ts  observables.ts  util.ts
server/src/http/: index.ts
server/src/spotify/: auth.ts  index.ts  types.ts
server/tests/: util.spec.ts
server/tests/spotify/: auth.spec.ts
songname/: package.json
songname/lib/: index.d.ts  index.js
songname/native/: Cargo.toml
songname/native/src/: lib.rs
src/: lib.rs
