[package]
name = "spotify-songname"
version = "0.1.0"
authors = ["Rihards Paskausks <pundurs@glhf.lv>"]
edition = "2018"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["tlhelp32", "winuser", "handleapi"] }

[lib]
# https://github.com/rust-lang/rust/issues/19680
# To fix caused because of there being a main.rs
crate-type = ["rlib", "dylib"]

